Fix header z-index

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,6 @@
 .header{
     position: fixed;
-    z-index: 999999999999999999999999999;
+    z-index: 999999999;
 
     top: 0px;
     left: 0;
